[FIX] Dark Mode Changes

--- a/addons/web_flectra/static/src/scss/backend_theme_customizer/dark_mode.scss
+++ b/addons/web_flectra/static/src/scss/backend_theme_customizer/dark_mode.scss
@@ -1,3 +1,4 @@
+$dark-bg:#212529;
 body.f_dark_mode {
     $primary:       #424242 !default;
     background-color: #212529 !important;
@@ -660,6 +661,30 @@ body.f_dark_mode{
 
     .o_form_view.o_form_nosheet, .o_form_view .o_form_nosheet {
         background:#555555 !important;
+    }
+
+    .o_searchview_facet_label {
+        background-color: #fff !important;
+    }
+
+    .o_onboarding_main .o_onboarding_step .o_onboarding_step_action{
+        color: #fff;
+    }
+
+    .o-mail-ChatterContainer, .o-mail-Form-chatter,
+    .o-mail-Thread-jumpPresent{
+           background-color: #212529 !important;
+    }
+
+    .o_kanban_renderer,.o_onboarding_wrap{
+             background-color:$dark-bg !important;
+    }
+
+    .o_field_statusbar > .o_statusbar_status > .o_arrow_button.o_arrow_button_current:not(.d-none):disabled, .o_field_statusbar_duration > .o_statusbar_status > .o_arrow_button.o_arrow_button_current:not(.d-none):disabled, .o_field_statusbar > .o_statusbar_status > .o_arrow_button:not(.d-none):active:not(.o_first), .o_field_statusbar_duration > .o_statusbar_status > .o_arrow_button:not(.d-none):active:not(.o_first){
+        background-color: #777777 !important;
+        border-color: #777777 !important;
+        color: #fff !important;
+
     }
 
 
