--- a/addons/web_flectra/static/src/scss/style.scss
+++ b/addons/web_flectra/static/src/scss/style.scss
@@ -235,10 +235,10 @@ oe_highlight {
 .o_searchview {
     .o_searchview_facet {
 
-         background-color: #ffffff;
+        background-color: #ffffff;
 
         .o_searchview_facet_label {
-            background-color: $brand-primary !important;
+          background-color: $brand-primary;
         }
     }
 }
